fix secondary panel overflowing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -84,7 +84,7 @@
 }
 
 .dashboard-primary-panel {
-  @apply w-full sm:w-8/12 bg-gray-300 p-2;
+  @apply w-full sm:w-8/12 bg-gray-300 p-2 h-full;
   transition: width 0.5s ease;
 }
 
